# ephemeral-browser

./: .gitignore  Cargo.toml  README.md  config.toml.example  create-snowflake.sh
.github/workflows/: ci.yml  release.yml
hooks/: pre-commit
src/: config.rs  main.rs
src/browser/: chromium.rs  common.rs  firefox.rs  mod.rs
