[package]
name = "ephemeral-browser"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
ctrlc = "3"
dirs = "6"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tempfile = "3"
toml = "0.8"
ureq = { version = "3", default-features = false, features = ["rustls"] }
which = "7"
zip = { version = "2", default-features = false, features = ["deflate"] }

[profile.release]
strip = true
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
